--- a/about-me.css
+++ b/about-me.css
@@ -137,7 +137,7 @@ nav a:hover {
  .connect {
    background-color: #FFFAF6;
    text-align: center;
-   margin-top: 40px;
+   margin-top: 20px;
  }
 
  .connect p {
@@ -210,24 +210,50 @@ nav a:hover {
 
 
  @media only screen and (max-width: 580px) {
-
    .navbar {
-     position: fixed;
      background-color: #FFFAF6;
-     overflow: hidden;
      list-style-type: none;
      margin: 0;
+     overflow: hidden;
+     position:fixed;
      padding: 0;
      width: 100%;
      z-index: 1;
    }
+
+
+   #work {
+     color: black;
+     display: inline-block;
+     float: right;
+     margin: 5px 5px;
+     padding: 14px 20px;
+     text-align: center;
+     text-decoration: none;
+   }
+
+    #about_me {
+     color: black;
+     display: inline-block;
+     float: right;
+     margin: 5px 5px;
+     padding: 14px 20px;
+     text-align: center;
+     text-decoration: none;
+   }
+
    #contact_nav {
      background-color: #F3DDCC;
+     display: inline-block;
+     float: right;
      color: black;
      padding: 14px 25px;
      margin: 5px 5px;
+     text-align: center;
+     text-decoration: none;
 
    }
+
 
    #logo  {
      float: left;
@@ -238,6 +264,111 @@ nav a:hover {
 
    nav a:hover {
      background-color: white;
+     color: black;
+   }
+
+   .me {
+     width: 80%;
+     height: 70%;
+   }
+
+   .main {
+     width: 80%;
+   }
+
+   blockquote {
+     font-size: 14px;
+     height: auto;
+     width: 80%;
+     margin-left: auto;
+     margin-right: auto;
+   }
+
+   .main {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 700px;
+   }
+
+   .main p {
+     font-size: 16px;
+   }
+   .hero {
+      height: 500px;
+      text-align: center;
+    }
+
+    h1 {
+      font-family: Karla;
+      font-size: 30px;
+    }
+
+
+
+}
+
+ @media only screen and (max-width: 780px) {
+
+   .containter {
+     width: 90%;
+   }
+
+   .navbar {
+     background-color: #FFFAF6;
+     list-style-type: none;
+     margin: 0;
+     overflow: hidden;
+     position:fixed;
+     padding: 0;
+     width: 100%;
+     z-index: 1;
+   }
+
+
+   #work {
+     color: black;
+     display: inline-block;
+     float: right;
+     margin: 5px 5px;
+     padding: 14px 20px;
+     text-align: center;
+     text-decoration: none;
+   }
+
+    #about_me {
+     color: black;
+     display: inline-block;
+     float: right;
+     margin: 5px 5px;
+     padding: 14px 20px;
+     text-align: center;
+     text-decoration: none;
+   }
+
+   #contact_nav {
+     background-color: #F3DDCC;
+     display: inline-block;
+     float: right;
+     color: black;
+     padding: 14px 25px;
+     margin: 5px 5px;
+     text-align: center;
+     text-decoration: none;
+
+   }
+
+   #logo  {
+     float: left;
+     object-fit: contain;
+     margin: 5px 0px 5px 30px;
+   }
+
+   #contact_nav:hover {
+     background-color: #FFDFE3
+   }
+
+   nav a:hover {
+     background-color: #FFDFE3;
      color: black;
    }
 
