--- a/contact.css
+++ b/contact.css
@@ -289,12 +289,14 @@ input:focus, textarea:focus {
     float: left;
     object-fit: contain;
     margin: 5px 0px 5px 30px;
+    width: 3%;
+
   }
 
   #contact_nav:hover {
     background-color: #FFDFE3
   }
-  
+
   nav a:hover {
     background-color: #FFDFE3;
     color: black;
