--- a/project.css
+++ b/project.css
@@ -5,23 +5,23 @@
 
 /* typography */
 body {
-  font-family: montserrat;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h1{
-  font-family: Karla;
+  font-family: 'Karla', sans-serif;
   font-size: 36px;
   line-height: 167%;
 }
 
 h3 {
-  font-family: Karla;
+  font-family: 'Karla', sans-serif;
   font-size: 30px;
   line-height: 167%;
 }
 
 h2 {
-  font-family: Karla;
+  font-family: 'Karla', sans-serif;
   font-size: 24px;
   line-height: 167%;
   margin: 40px;
@@ -80,7 +80,7 @@ h2 {
   float: left;
   margin: 5px 0px 5px 100px;
   object-fit: contain;
-
+  width: 3%;
 }
 
 
@@ -152,7 +152,7 @@ nav a:hover {
   }
 
   .main p {
-    font-family: montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 20px;
     margin: 40px;
     line-height: 167%;
@@ -161,55 +161,53 @@ nav a:hover {
   /*images*/
 
   .center {
+    width: 80%;
     display: block;
     margin-left: auto;
     margin-right: auto;
   }
 
-  .side {
+  .side, .user {
     width: 30%;
     height: 300px;
     padding: 10px;
   }
 
-  .user {
-    width: 30%;
-    height: 350px;
-    padding: 30px;
-    text-align: center;
-    margin-left: 20px;
-  }
 
-  .mood {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+  .mood, .troveblue, .mockupimage {
     width: 70%;
-    height: 400px;
-    padding: 10px;
-  }
-
-  .mockupimage {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 600px;
   }
+
 
   .wireframeimage {
+    width: 60%;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 400px;
-    width: 600px;
   }
 
+  .graph {
+    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
+  .sketch {
+    width: 40%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
   /* connect */
   .connect p {
-    font-family: montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 20px;
     line-height: 150%;
+    padding: 10px 10px;
   }
 
   .connect {
@@ -230,7 +228,7 @@ nav a:hover {
   }
 
    .connect a:hover, a:active {
-    background-color: #FFDFE3;
+    background-color:  #FFDFE3;
   }
 
 /* footer */
@@ -272,91 +270,33 @@ footer p {
    color: #ffb1c3;
 }
 
+
 /* responsiveness */
 
-@media only screen and (max-width: 580px) {
- .container {
-   width: 80%;
- }
- .navbar {
-   background-color: #FFFAF6;
-   list-style-type: none;
-   margin: 0;
-   overflow: hidden;
-   position:fixed;
-   padding: 0;
-   width: 100%;
-   z-index: 1;
- }
-
-
- #work {
-   color: black;
-   display: inline-block;
-   float: right;
-   margin: 5px 5px;
-   padding: 14px 20px;
-   text-align: center;
-   text-decoration: none;
- }
-
-  #about_me {
-   color: black;
-   display: inline-block;
-   float: right;
-   margin: 5px 5px;
-   padding: 14px 20px;
-   text-align: center;
-   text-decoration: none;
- }
-
- #contact_nav {
-   background-color: #F3DDCC;
-   display: inline-block;
-   float: right;
-   color: black;
-   padding: 14px 25px;
-   margin: 5px 5px;
-   text-align: center;
-   text-decoration: none;
-
- }
-
-  #logo  {
-    float: left;
-    object-fit: contain;
-    margin: 5px 0px 5px 30px;
+@media only screen and (max-width: 600px) {
+  * {
+    box-sizing: border-box;
   }
-
-  #contact_nav:hover {
-    background-color: #FFDFE3
-  }
-
-  nav a:hover {
-    background-color: white;
-    color: black;
-  }
-
   /* typography */
   body {
-    font-family: montserrat;
+    font-family: 'Montserrat', sans-serif;
   }
 
   h1{
-    font-family: Karla;
-    font-size: 40px;
+    font-family: 'Karla', sans-serif;
+    font-size: 30px;
     line-height: 167%;
   }
 
   h3 {
-    font-family: Karla;
+    font-family: 'Karla', sans-serif;
     font-size: 30px;
     line-height: 167%;
-    margin: 40px;
+    margin: 20px;
   }
 
   h2 {
-    font-family: Karla;
+    font-family: 'Karla', sans-serif;
     font-size: 20px;
     line-height: 150%;
     margin: 20px;
@@ -365,147 +305,77 @@ footer p {
 
   .hero p {
     margin-top: 10px;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 150%;
   }
 
   .main p {
-    font-family: montserrat;
+    font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     margin: 20px;
     line-height: 150%;
   }
 
   .connect p {
-    font-family: montserrat;
-    font-size: 24px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
     line-height: 167%;
     padding: 10px 10px;
   }
 
-
-  /*images*/
-
-  .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-    height: 70%;
-  }
-
-  .side {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px;
-    width: 70%;
-  }
-
-  .user {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px;
-    width: 50%;
-  }
-
-  .mood {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-    height: 70%;
-    padding: 10px;
+  /* navigation bar */
+  .navbar {
+    background-color: #FFFAF6;
+    list-style-type: none;
+    margin: 0;
+    overflow: hidden;
+    position:fixed;
+    padding: 0;
+    width: 100%;
   }
 
 
-.mockupimage {
-  width: 80%;
-  height:70%;
-}
+  #work {
+    color: black;
+    display: inline-block;
+    float: right;
+    margin: 5px 5px;
+    padding: 10px 5px;
+    text-align: center;
+    text-decoration: none;
+  }
 
-.wireframeimage {
-  width: 80%;
-  height:70%;
-}
+   #about_me {
+    color: black;
+    display: inline-block;
+    float: right;
+    margin: 5px 5px;
+    padding: 10px 5px;
+    text-align: center;
+    text-decoration: none;
+  }
 
-fa-envelope:hover {
- color: #ffb1c3;
-}
+  #contact_nav {
+    background-color: #F3DDCC;
+    display: inline-block;
+    float: right;
+    color: black;
+    padding: 10px 5px;
+    margin: 5px 5px;
+    text-align: center;
+    text-decoration: none;
 
-.fa-envelope {
-  color: black;
-}
+  }
 
-.fa-github-square:hover{
-   color: #ffb1c3;
-}
-
-.fa-linkedin:hover{
-   color: #ffb1c3;
-}
-
-.fa-dribbble-square:hover{
-   color: #ffb1c3;
-}
-
-}
-
-/* responsiveness */
-
-@media only screen and (max-width: 780px) {
- .container {
-   width: 90%;
- }
- .navbar {
-   background-color: #FFFAF6;
-   list-style-type: none;
-   margin: 0;
-   overflow: hidden;
-   position:fixed;
-   padding: 0;
-   width: 100%;
-   z-index: 1;
- }
-
-
- #work {
-   color: black;
-   display: inline-block;
-   float: right;
-   margin: 5px 5px;
-   padding: 14px 20px;
-   text-align: center;
-   text-decoration: none;
- }
-
-  #about_me {
-   color: black;
-   display: inline-block;
-   float: right;
-   margin: 5px 5px;
-   padding: 14px 20px;
-   text-align: center;
-   text-decoration: none;
- }
-
- #contact_nav {
-   background-color: #F3DDCC;
-   display: inline-block;
-   float: right;
-   color: black;
-   padding: 14px 25px;
-   margin: 5px 5px;
-   text-align: center;
-   text-decoration: none;
-
- }
+  #contact_nav:hover {
+    background-color: #FFDFE3;
+  }
 
   #logo  {
     float: left;
+    margin: 5px 0px 5px 20px;
     object-fit: contain;
-    margin: 5px 0px 5px 30px;
+    width: 6%;
   }
 
 
@@ -513,54 +383,6 @@ fa-envelope:hover {
     background-color: #FFDFE3;
     color: black;
   }
-
-  /* typography */
-  body {
-    font-family: montserrat;
-  }
-
-  h1{
-    font-family: Karla;
-    font-size: 40px;
-    line-height: 167%;
-  }
-
-  h3 {
-    font-family: Karla;
-    font-size: 30px;
-    line-height: 167%;
-    margin: 40px;
-  }
-
-  h2 {
-    font-family: Karla;
-    font-size: 20px;
-    line-height: 150%;
-    margin: 20px;
-
-  }
-
-  .hero p {
-    margin-top: 10px;
-    font-size: 20px;
-    line-height: 150%;
-  }
-
-  .main p {
-    font-family: montserrat;
-    font-size: 18px;
-    margin: 20px;
-    line-height: 150%;
-  }
-
-  .connect p {
-    font-family: montserrat;
-    font-size: 24px;
-    line-height: 167%;
-    padding: 10px 10px;
-  }
-
-
   /*images*/
 
   .center {
@@ -584,7 +406,7 @@ fa-envelope:hover {
     margin-left: auto;
     margin-right: auto;
     padding: 10px;
-    width: 50%;
+    width: 40%;
   }
 
   .mood {
@@ -597,34 +419,187 @@ fa-envelope:hover {
   }
 
 
-.mockupimage {
-  width: 80%;
-  height:70%;
+  .mockupimage {
+    width: 80%;
+    height:70%;
+  }
+
+  .wireframeimage {
+    width: 80%;
+    height:70%;
+  }
+
+  .hero {
+    width: 90%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /* hero */
+
+
+  .hero {
+     background-color: white;
+     text-align: center;
+   }
+
+   .hero p {
+     font-size: 20px;
+   }
+
+   .hero a:link, a:visited {
+    background-color: #F3DDCC;
+    color: black;
+    display: inline-block;
+    font-size: 18px;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    margin: 10px 10px;
+   }
+
+   .hero a:hover,  a:active {
+    background-color: #FFDFE3;
+   }
+
+   .hero p {
+     margin-top: 10px;
+     font-size: 20px;
+     line-height: 150%;
+   }
+
+
 }
 
-.wireframeimage {
-  width: 80%;
-  height:70%;
-}
-fa-envelope:hover {
- color: #ffb1c3;
-}
+@media only screen and (max-width: 768px) {
 
-.fa-envelope {
-  color: black;
-}
 
-.fa-github-square:hover{
-   color: #ffb1c3;
-}
+     * {
+       box-sizing: border-box;
+     }
 
-.fa-linkedin:hover{
-   color: #ffb1c3;
-}
 
-.fa-dribbble-square:hover{
-   color: #ffb1c3;
-}
+     /* typography */
 
+      body {
+        font-family: 'Montserrat', sans-serif;
+      }
+
+      h1{
+        font-family: 'Karla', sans-serif;
+        font-size: 30px;
+      }
+
+      h3 {
+        font-family: 'Karla', sans-serif;
+        font-size: 24px;
+        line-height: 167%;
+      }
+
+     h2 {
+        font-family: 'Karla', sans-serif;
+        font-size: 18px;
+        margin-left: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+     }
+
+     /*hero */
+
+     .hero {
+        background-color: #FFFAF6;
+        height: 450px;
+        text-align: center;
+      }
+
+      .hero a:link, a:visited {
+       background-color: #F3DDCC;
+       color: black;
+       display: inline-block;
+       font-size: 18px;
+       padding: 14px 25px;
+       text-align: center;
+       text-decoration: none;
+       margin: 10px 10px;
+      }
+
+      .hero a:hover,  a:active {
+       background-color:  #FFDFE3;
+      }
+
+      /* navigation bar */
+      .navbar {
+        background-color: #FFFAF6;
+        list-style-type: none;
+        margin: 0;
+        overflow: hidden;
+        position:fixed;
+        padding: 0;
+        width: 100%;
+      }
+
+
+      #work {
+        color: black;
+        display: inline-block;
+        float: right;
+        margin: 5px 5px;
+        padding: 10px 5px;
+        text-align: center;
+        text-decoration: none;
+      }
+
+       #about_me {
+        color: black;
+        display: inline-block;
+        float: right;
+        margin: 5px 5px;
+        padding: 10px 5px;
+        text-align: center;
+        text-decoration: none;
+      }
+
+      #contact_nav {
+        background-color: #F3DDCC;
+        display: inline-block;
+        float: right;
+        color: black;
+        padding: 10px 5px;
+        margin: 5px 5px;
+        text-align: center;
+        text-decoration: none;
+
+      }
+
+      #contact_nav:hover {
+        background-color: #FFDFE3;
+      }
+
+      #logo  {
+        float: left;
+        margin: 5px 0px 5px 20px;
+        object-fit: contain;
+        width: 7%;
+      }
+
+
+      .hero {
+        width: 90%;
+        height: auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      .hero {
+         background-color: white;
+         text-align: center;
+       }
+
+       .hero p {
+         font-size: 20px;
+       }
 
 }
