--- a/contact.css
+++ b/contact.css
@@ -232,7 +232,7 @@ input:focus, textarea:focus {
 
 /* media queries */
 
-@media only screen and (max-width: 580px) {
+@media only screen and (max-width: 600px) {
 	#form-div{
 		left: 3%;
 		width: 88%;
@@ -289,7 +289,7 @@ input:focus, textarea:focus {
     float: left;
     object-fit: contain;
     margin: 5px 0px 5px 30px;
-    width: 3%;
+    width: 6%;
 
   }
 
@@ -301,4 +301,77 @@ input:focus, textarea:focus {
     background-color: #FFDFE3;
     color: black;
   }
+}
+
+@media only screen and (max-width: 768px) {
+  #form-div{
+		left: 3%;
+		width: 88%;
+    margin-left: 0;
+    margin-right: 20;
+		padding-left: 3%;
+		padding-right: 3%;
+	}
+  .navbar {
+    background-color: #FFFAF6;
+    list-style-type: none;
+    margin: 0;
+    overflow: hidden;
+    position:fixed;
+    padding: 0;
+    width: 100%;
+    z-index: 1;
+  }
+
+
+  #work {
+    color: black;
+    display: inline-block;
+    float: right;
+    margin: 5px 5px;
+    padding: 14px 20px;
+    text-align: center;
+    text-decoration: none;
+  }
+
+   #about_me {
+    color: black;
+    display: inline-block;
+    float: right;
+    margin: 5px 5px;
+    padding: 14px 20px;
+    text-align: center;
+    text-decoration: none;
+  }
+
+  #contact_nav {
+    background-color: #F3DDCC;
+    display: inline-block;
+    float: right;
+    color: black;
+    padding: 14px 25px;
+    margin: 5px 5px;
+    text-align: center;
+    text-decoration: none;
+
+  }
+
+  #logo  {
+    float: left;
+    object-fit: contain;
+    margin: 5px 0px 5px 30px;
+    width: 6%;
+
+  }
+
+  #contact_nav:hover {
+    background-color: #FFDFE3
+  }
+
+  nav a:hover {
+    background-color: #FFDFE3;
+    color: black;
+  }
+
+
 }
